# licensing-playground-workspace

./: Cargo.toml  README.md
.github/workflows/: ci.yml
sn_api/: Cargo.toml  README.md
sn_api/src/: lib.rs
sn_cli/: Cargo.toml  README.md
sn_cli/src/: main.rs
sn_client/: Cargo.toml  README.md
sn_client/src/: lib.rs
sn_dysfunction/: Cargo.toml  README.md
sn_dysfunction/src/: lib.rs
sn_interface/: Cargo.toml  README.md
sn_interface/src/: lib.rs
sn_node/: Cargo.toml  README.md
sn_node/src/: main.rs
