[package]
name = "sn_api"
version = "0.62.0"
description = "Safe API"
authors = [
  "bochaco <gabrielviganotti@gmail.com>",
  "Josh Wilson <joshuef@gmail.com>"
]
license = "GPL-3.0"
repository = "https://github.com/maidsafe/sn_api"
edition = "2021"

[dependencies]
sn_client = { path = "../sn_client", version = "^0.64.0" }
sn_interface = { path = "../sn_interface", version = "^0.4.0" }
