[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "The Safe Network Client."
documentation = "https://docs.rs/sn_client"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_client"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.64.0"

[dependencies]
sn_interface = { path = "../sn_interface", version = "^0.4.0" }
