[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "The Safe Network Node Dysfunctional Detection."
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_dysfunction"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.3.0"

[features]
default = []

[dependencies]
sn_interface = { path = "../sn_interface", version = "^0.4.0" }
xor_name = "4.0.1"
