[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network Interfaces. Messaging and Types."
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "sn_interface"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.4.0"
